# multi

./: README.md
example/: multi.yaml  multi_netlinkrecv.c
src/: CMakeLists.txt  Makefile  multi_cmp.c  multi_cmp.h  multi_common.h  multi_core.c  multi_core.h  multi_dhcp_common.h  multi_dhcp_constants.h  multi_dhcp_main.c  multi_dhcp_main.h  multi_dhcp_network.c  multi_dhcp_network.h  multi_dhcp_protocol.c  multi_dhcp_protocol.h  multi_link_core.c  multi_link_core.h  multi_link_filter.c  multi_link_filter.h  multi_link_netlink.c  multi_link_netlink.h  multi_link_shared.h  multi_macros.h  multi_multicast.c  multi_shared.h
src/files/: multi-systemd.init  multi-upstart.init  multi.init  postinst  postrm  prerm
src/files/systemd/: conffiles  multi.service  postinst  prerm
src/files/upstart/: postinst  prerm
